Fix threading in IndexScheduler

Protect a ton of variables with Mutexes.

BUG: 279347
REVIEW: 102251

Conflicts:

	nepomuk/services/strigi/indexscheduler.cpp